# OTSun

./: .gitattributes  .gitignore  Dockerfile  LICENSE.md  LICENSE.txt  MANIFEST  MANIFEST.in  README.md  TODO.md  otsun.py  pyproject.toml  raytrace.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: release.yaml  sync.yaml
OTSunWebApp/: readme.md
doc/: conf.py  index.rst  intro.rst  modules.rst  otsun.rst
docs/: Makefile  README  conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html  raytrace.html
docs/source/: conf.py
otsun/: __init__.py  _version.py  experiments.py  logging_unit.py  materials.py  math.py  movements.py  optics.py  outputs.py  ray.py  scene.py  source.py
src/otsun/: __about__.py  __init__.py  experiments.py  helpers.py  materials.py  math.py  movements.py  optics.py  outputs.py  ray.py  scene.py  source.py
src/otsun/data/: ASTMG173-direct.txt
tests/: AR-J.txt  ASTMG173-direct.txt  Ag_Yang.txt  Air_Ag_Air.txt  Al.txt  BK7.txt  BK7_Schott.txt  EVA.txt  LFR.FCStd  MgF2.txt  Perovskite_Leguy.txt  Perovskite_Stack_200nm.FCStd  Reflector_Layer.FCStd  Si3N4.txt  Si3N4Reflectancia.txt  Silicon.txt  Solar_Tower.FCStd  Spiro_.txt  __init__.py  create_scene_PTC.py  exm.py  parabolic_collector.py  part_3.py  selective_absorber.txt  simple_scene.py  test1.py  test2.py  test3.py  test_1.py  test_2.py  test_3.py  test_4.py  test_5.py  test_LFR.FCStd  test_PTC.FCStd  test_Si_cell.FCStd
