[build-system]
requires = ["hatchling", "hatch-regex-commit"]
build-backend = "hatchling.build"

[project]
name = "otsun"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Biel Cardona", email = "bielcardona@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "numpy",
  "autologging",
  "scipy",
  "pandas"
]

[project.urls]
Documentation = "https://github.com/unknown/otsun#readme"
Issues = "https://github.com/unknown/otsun/issues"
Source = "https://github.com/unknown/otsun"

[tool.hatch.version]
source = "regex_commit"
path = "src/otsun/__about__.py"
commit_message = "🚀 Version {new_version}"
tag_sign = false

[tool.hatch.build]
include = [
    "src/**",
    "README.md",
    "LICENSE.txt",
]
exclude = [
    "tests/**",
    "docs/**",
    "dist/**",
    "build/**",
    ".*",
    "*.egg-info/**",
    "*.egg/**",
    "*.eggs/**",
    "*.log",
    "*.tmp",
    "*.tmp.*",
    "*.swp",
    ".gitignore",
]

[tool.hatch.envs.default]
dependencies = [
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

