[tool.poetry]
name = "otsun"
version = "2.12.4"
description = ""
authors = ["Biel Cardona <bielcardona@gmail.com>"]
readme = "README.md"
packages = [{include = "otsun", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10"
numpy = "^1.23"
scipy = "^1.9.3"
autologging = "^1.3.2"
pandas = "^1.5.2"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
