[tool.poetry]
name = "otsun"
version = "2.13.2"
description = ""
authors = ["Biel Cardona <bielcardona@gmail.com>"]
readme = "README.md"
packages = [{include = "otsun", from = "src"}]
include = ["src/data/ASTMG173-direct.txt"]

[tool.poetry.dependencies]
python = ">=3.10"
numpy = "^1.23"
scipy = "^1.9.3"
autologging = "^1.3.2"
pandas = "^1.5.2"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
freecad-stubs = "^1.0.17"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
